# ChangeLog for media-libs/openinventor
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/openinventor/ChangeLog,v 1.10 2006/01/20 21:19:22 stefaan Exp $

*openinventor-2.1.5.10-r2 (20 Jan 2006)

  20 Jan 2006; Stefaan De Roeck <stefaan@gentoo.org>
  +openinventor-2.1.5.10-r2.ebuild:
  Porting to modular X

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org>
  -openinventor-2.1.5.10.ebuild:
  Remove old ebuild

  25 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org>
  openinventor-2.1.5.10-r1.ebuild:
  Marking stable on alpha, bug #116087

  24 Dec 2005; Simon Stelling <blubb@gentoo.org>
  openinventor-2.1.5.10-r1.ebuild:
  stable on amd64

  20 Dec 2005; Chris White <chriswhite@gentoo.org>
  openinventor-2.1.5.10-r1.ebuild:
  x86 stable for bug #116087.

*openinventor-2.1.5.10-r1 (15 Nov 2005)

  15 Nov 2005; Stefaan De Roeck <stefaan@gentoo.org>
  +files/gentoo-paths-v2.patch, +openinventor-2.1.5.10-r1.ebuild:
  Correct paths in *.RUNME files, put manuals in /usr/share/man instead of
  /usr/man

  15 Nov 2005; Chris White <chriswhite@gentoo.org>
  openinventor-2.1.5.10.ebuild:
  Marked x86 stable as per bug #112485.

  14 Nov 2005; Stefaan De Roeck <stefaan@gentoo.org>
  openinventor-2.1.5.10.ebuild:
  Fix multilib-strict issue

  14 Nov 2005; Stefaan De Roeck <stefaan@gentoo.org>
  openinventor-2.1.5.10.ebuild:
  Stable on alpha (bug #112485)

*openinventor-2.1.5.10 (16 Sep 2005)

  16 Sep 2005; Stefaan De Roeck <stefaan@gentoo.org>
  +files/freetype2-activate.patch, +files/freetype2-includes.patch,
  +files/gcc4-support.patch, +files/gentoo-paths.patch, +files/no-csh.patch,
  +files/support-archs.patch, +files/use-byacc.patch, +metadata.xml,
  +openinventor-2.1.5.10.ebuild:
  New ebuild for SGI OpenInventor, fixes bug #31742
