@@ -1,14 +1,55 @@
-MD5 dcbac099fb1f004e5977a874e9980582 ChangeLog 1824
-MD5 8ce8331fdab79fb938507af45228210f files/digest-openinventor-2.1.5.10-r1 74
-MD5 8ce8331fdab79fb938507af45228210f files/digest-openinventor-2.1.5.10-r2 74
+AUX freetype2-activate.patch 261 RMD160 eb19eff72dc7d3e97a3758a3649872474c579a85 SHA1 374b9db00b9a5f2071bb028e5c8a6bb3df1758aa SHA256 f2d86306d686c58bf560c189cd158208515c69f8c545fc3d5f4ee246adaa710c
 MD5 481f4b44d5f9f6b9af804116c4d2bcc0 files/freetype2-activate.patch 261
+RMD160 eb19eff72dc7d3e97a3758a3649872474c579a85 files/freetype2-activate.patch 261
+SHA256 f2d86306d686c58bf560c189cd158208515c69f8c545fc3d5f4ee246adaa710c files/freetype2-activate.patch 261
+AUX freetype2-includes.patch 291 RMD160 90119f53b748f4428aba7de86d12ec0392badc64 SHA1 177e61834437c3c84783163178f9dfec5e84e9e8 SHA256 e77b3ddd16c3ef6184bfa235257f81a5f8f2dd6e043f91c60ec6bc0986bddb85
 MD5 1a742e312c436314783b6b91b8a485d4 files/freetype2-includes.patch 291
+RMD160 90119f53b748f4428aba7de86d12ec0392badc64 files/freetype2-includes.patch 291
+SHA256 e77b3ddd16c3ef6184bfa235257f81a5f8f2dd6e043f91c60ec6bc0986bddb85 files/freetype2-includes.patch 291
+AUX gcc4-support.patch 4155 RMD160 8ce4e4d83f8283f75e2bb601c7b2991164a4d273 SHA1 846171c44c28dbfdcf58c94f6e7d9ada05f69e07 SHA256 f97ea155d16a854a2246112274c6a763565dab21297ce10521c2601fe1e139a6
 MD5 bd1dcb17d80481152c4856c899b21144 files/gcc4-support.patch 4155
+RMD160 8ce4e4d83f8283f75e2bb601c7b2991164a4d273 files/gcc4-support.patch 4155
+SHA256 f97ea155d16a854a2246112274c6a763565dab21297ce10521c2601fe1e139a6 files/gcc4-support.patch 4155
+AUX gentoo-paths-v2.patch 10940 RMD160 a68ac0c41902de4192b7728110bd0726e47d6d85 SHA1 01d8a0c8518265cf3712c2fb1618b0d5950fe7a9 SHA256 59d8d3fae547d5926932f9c66a8facac924b4900a69dd9f4c33546b9522ed2a4
 MD5 0bcb529884efc8c3d353d9c74723bd8f files/gentoo-paths-v2.patch 10940
+RMD160 a68ac0c41902de4192b7728110bd0726e47d6d85 files/gentoo-paths-v2.patch 10940
+SHA256 59d8d3fae547d5926932f9c66a8facac924b4900a69dd9f4c33546b9522ed2a4 files/gentoo-paths-v2.patch 10940
+AUX gentoo-paths.patch 10582 RMD160 36cac45fba2bc788c05583750bc31836386ef967 SHA1 c0383831dfa4ab30c715b64b702aa4c6160b956f SHA256 0b2abc1430038e9f98d21d8316d1c8167f4c454b95c5f67bde2b076d0b9a572d
 MD5 43d9fc3b8d7b147ca5378116eb24d558 files/gentoo-paths.patch 10582
+RMD160 36cac45fba2bc788c05583750bc31836386ef967 files/gentoo-paths.patch 10582
+SHA256 0b2abc1430038e9f98d21d8316d1c8167f4c454b95c5f67bde2b076d0b9a572d files/gentoo-paths.patch 10582
+AUX no-csh.patch 1053 RMD160 f2347aaf379c7f6dc862e13aedc0d5ecaed44071 SHA1 dfc37fb9a10f829cb03f66a3cd8ea746b49da1a6 SHA256 dc18d6e344c7719d04fb2311826bb4ba1e03fddb5667c47927ce2ee50bded4b0
 MD5 e44139ff4ff396e391630ccff2cab27b files/no-csh.patch 1053
+RMD160 f2347aaf379c7f6dc862e13aedc0d5ecaed44071 files/no-csh.patch 1053
+SHA256 dc18d6e344c7719d04fb2311826bb4ba1e03fddb5667c47927ce2ee50bded4b0 files/no-csh.patch 1053
+AUX support-archs.patch 1116 RMD160 a3fe28177e4c47446b37c9dcdc96049556656e99 SHA1 caee7196c2f58a41593fbafb70b3d5eed7e5ac62 SHA256 d732f8d11e41033cee83774d949b140047afb407c8442d14b418cfaaf205cbc9
 MD5 3514d32986d95c1a1edd9c8503913121 files/support-archs.patch 1116
+RMD160 a3fe28177e4c47446b37c9dcdc96049556656e99 files/support-archs.patch 1116
+SHA256 d732f8d11e41033cee83774d949b140047afb407c8442d14b418cfaaf205cbc9 files/support-archs.patch 1116
+AUX use-byacc.patch 1444 RMD160 f2c4b6227b5960accf6faf040489bb00bc34de44 SHA1 4f33c4b4e8052cb5dfb68236654373de99eb00c3 SHA256 c4f1e02f8c77008777ed7845e23fbaa60b939d4563fb47cfb2bb694425374af7
 MD5 3b720d5d1e432dec6ec597f5391caef1 files/use-byacc.patch 1444
-MD5 0f7895c10f859b7a86f1df293a1e602b metadata.xml 515
+RMD160 f2c4b6227b5960accf6faf040489bb00bc34de44 files/use-byacc.patch 1444
+SHA256 c4f1e02f8c77008777ed7845e23fbaa60b939d4563fb47cfb2bb694425374af7 files/use-byacc.patch 1444
+DIST inventor-2.1.5-10.src.tar.gz 8282780 RMD160 0e600eab15016ab3f8de7b814d12bd78d83f1a05 SHA1 313665bc762e09b18e2d678f0a724b6457e3c95b SHA256 1b0106a705191f525fc89a9f3def37bdeae5ab9ceb1b4d9e5ede8a442bdf8d6b
+EBUILD openinventor-2.1.5.10-r1.ebuild 2656 RMD160 6ee477ead550388498a718ad9cbac9abfd4a38d8 SHA1 fa9e71856127c2d0ee8680a38c181ad1cd8c7842 SHA256 5c654667a2d7341aeaaa3b7984a15a9e56c31d1a109c76ec1db3b4ba436077a8
 MD5 551d61e193abd8390f25ec74e3139fa6 openinventor-2.1.5.10-r1.ebuild 2656
-MD5 6bee772632086226c195349390e3f15a openinventor-2.1.5.10-r2.ebuild 2646
+RMD160 6ee477ead550388498a718ad9cbac9abfd4a38d8 openinventor-2.1.5.10-r1.ebuild 2656
+SHA256 5c654667a2d7341aeaaa3b7984a15a9e56c31d1a109c76ec1db3b4ba436077a8 openinventor-2.1.5.10-r1.ebuild 2656
+EBUILD openinventor-2.1.5.10-r2.ebuild 2983 RMD160 e792e063b3ab4fcdddf2b0185810938bb2b093f0 SHA1 cb5905b8096744af2a5dd85778cc0c39847d976b SHA256 00144e13e8b0a6526d183f486602d4d83d0a4bba484ebe1032820c825b753742
+MD5 cd7d3a5b4c1eedd78bc1fbabf222f2bc openinventor-2.1.5.10-r2.ebuild 2983
+RMD160 e792e063b3ab4fcdddf2b0185810938bb2b093f0 openinventor-2.1.5.10-r2.ebuild 2983
+SHA256 00144e13e8b0a6526d183f486602d4d83d0a4bba484ebe1032820c825b753742 openinventor-2.1.5.10-r2.ebuild 2983
+MISC ChangeLog 2034 RMD160 3b9b7f641720201be86d765ca8069f797bbec0b0 SHA1 4210ed2cdb9251fb6de6b86daba1934956042f81 SHA256 017f1866a9ca83450c5aa7cb3d8865ad6c15d5d509488ab8e86fdb54f8a5298e
+MD5 a6d32ff4e806990977c3e49924923624 ChangeLog 2034
+RMD160 3b9b7f641720201be86d765ca8069f797bbec0b0 ChangeLog 2034
+SHA256 017f1866a9ca83450c5aa7cb3d8865ad6c15d5d509488ab8e86fdb54f8a5298e ChangeLog 2034
+MISC metadata.xml 515 RMD160 ff932be33799d8342475e5888365e62aa87665f6 SHA1 188a77250a4ea19276fad2aa778a7af7cee47870 SHA256 d6149838745445b99a41d8b03e50f3248a2f05e20276d58110cb5e20273b6f01
+MD5 0f7895c10f859b7a86f1df293a1e602b metadata.xml 515
+RMD160 ff932be33799d8342475e5888365e62aa87665f6 metadata.xml 515
+SHA256 d6149838745445b99a41d8b03e50f3248a2f05e20276d58110cb5e20273b6f01 metadata.xml 515
+MD5 4b2882fa24331a0ee275231a46c2dbe2 files/digest-openinventor-2.1.5.10-r1 268
+RMD160 2e9a0d832d8149d27278f176c086315c0260de59 files/digest-openinventor-2.1.5.10-r1 268
+SHA256 37eb66566f39bec0acff69c778bf07e3f4d5b2b019c2b4056738d8a7e17f25c2 files/digest-openinventor-2.1.5.10-r1 268
+MD5 4b2882fa24331a0ee275231a46c2dbe2 files/digest-openinventor-2.1.5.10-r2 268
+RMD160 2e9a0d832d8149d27278f176c086315c0260de59 files/digest-openinventor-2.1.5.10-r2 268
+SHA256 37eb66566f39bec0acff69c778bf07e3f4d5b2b019c2b4056738d8a7e17f25c2 files/digest-openinventor-2.1.5.10-r2 268
