@@ -1,1 +1,3 @@
 MD5 82208096f1e0b111160e864e239c3a51 inventor-2.1.5-10.src.tar.gz 8282780
+RMD160 0e600eab15016ab3f8de7b814d12bd78d83f1a05 inventor-2.1.5-10.src.tar.gz 8282780
+SHA256 1b0106a705191f525fc89a9f3def37bdeae5ab9ceb1b4d9e5ede8a442bdf8d6b inventor-2.1.5-10.src.tar.gz 8282780
