@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/openinventor
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/openinventor/ChangeLog,v 1.10 2006/01/20 21:19:22 stefaan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/openinventor/ChangeLog,v 1.11 2006/07/09 12:50:10 stefaan Exp $
+
+  09 Jul 2006; Stefaan De Roeck <stefaan@gentoo.org>
+  openinventor-2.1.5.10-r2.ebuild:
+  When media-libs/mesa was compiled without USE-flag motif, inform that
+  remerging that will be necessary (bug #131728)
 
 *openinventor-2.1.5.10-r2 (20 Jan 2006)
 
